project-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
spec:
  type: NodePort
  selector:
    app: web-server
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 8080
      targetPort: 8080
